# SIMD-sort-benchmark

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  bench_bandwidth.cpp  bench_scatter_parlay.cpp  bench_x86simdsort_blocks.cpp  bench_x86simdsort_blocks_parlay.cpp  flush_range_clflushopt.h  perf_ctl.hpp  run_bw_amp_grid.py  run_imc_bw.py  run_perf_test.py  run_scatter_grid.py  run_scatter_scaling.py  test_stream_bad.cpp  test_stream_numa.cpp  test_stream_orig.cpp
results_CS202/: scatter_results.csv
scripts/: plot_bw.py  plot_scatter.py  run_bw_amp_grid.py  run_diag_faults.py  run_scatter_grid.py  run_simd_bench.py
